--- a/app/components/Wallet/ReceiveModal.scss
+++ b/app/components/Wallet/ReceiveModal.scss
@@ -77,7 +77,7 @@
 
       span:nth-child(1) {
         flex: 9;
-        overflow-x: scroll;
+        overflow-y: auto;
       }
 
       span:nth-child(2) {
